--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -41,6 +41,8 @@ KVM的初始化步骤分为以下三步。
 
 2）进入**kvm\_main.c**中的**kvm\_init**函数进行正式的初始化工作，期间进行了一系列子操作。(virt/kvm/kvm\_main.c)
 
+注: vmx.c中定义了一个结构体`vmx_x86_ops`, 这是函数指针集合(各种操作的集合). 初始化很多动作以及iotcl调用也都会用到这些函数. 作为参数传给`kvm_init()`, 再传给`kvm_arch_init()`, 在传递到全局变量`kvm_x86_ops`.
+
 * 通过**kvm\_arch\_init**函数初始化KVM内部的一些数据结构：**注册全局变量kvm\_x86\_ops**、**初始化MMU**等数据结构、**初始化Timer定时器**架构。(arch/x86/kvm/x86.c)
 * 分配KVM内部操作所需要的**内存空间**。
 * 调用kvm\_x86\_ops的**hardware\_setup**函数进行具体的硬件体系结构的初始化工作。
