--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -1,1 +1,8 @@
-参照`Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md`
+
+
+# 整体介绍
+
+`Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md`
+
+![2019-12-11-11-04-37.png](./images/2019-12-11-11-04-37.png)
+
