--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -6,3 +6,22 @@
 
 ![2019-12-11-11-04-37.png](./images/2019-12-11-11-04-37.png)
 
+```
+module_init(vmx_init)                        // 入口
+ ├─ vmx_init()                               // kvm-intel.ko模块初始化
+ |   ├─ kvm_init(KVM_GET_API_VERSION)        // 初始化KVM框架
+ |   └─ kvm_init()                           // 初始化KVM框架
+ ├─ module_call_init(MODULE_INIT_QOM)        // 初始化 QOM
+ ├─ runstate_init()
+ ├─ init_clocks()                            // 初始化时钟源
+ ├─ module_call_init(MODULE_INIT_MACHINE)
+ ├─ switch(popt->index) case QEMU_OPTION_XXX // 解析 QEMU 参数
+ ├─ socket_init()
+ ├─ os_daemonize()
+ ├─ configure_accelerator()                  // 启用 KVM 加速支持
+ |   └─ kvm_init()                           // 【1】创建 KVM 虚拟机并获取对应的 fd
+ |       ├─ kvm_ioctl(KVM_GET_API_VERSION)   // 检查 KVM API 版本
+ |       ├─ kvm_ioctl(KVM_CREATE_VM)         // 创建虚拟机，并获取 vmfd
+ |       ├─ kvm_arch_init()
+ |       └─ memory_listener_register(&kvm_memory_listener) // 注册 kvm_memory_listener
+```
