--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -9,7 +9,19 @@
 ```
 vmx_init()                               // kvm-intel.ko模块初始化
  ├─ kvm_init(KVM_GET_API_VERSION)        // 初始化KVM框架
- |   └─ kvm_arch_init()                       // 初始化KVM框架
+ |   ├─ kvm_arch_init()                  // 初始化KVM框架
+ |   ├─ kvm_irqfd_init()                 // 初始化KVM框架
+ |   ├─ kvm_arch_hardware_setup()        // 初始化KVM框架
+ |   ├─ smp_call_function_single()       // 对每个online cpu
+ |   ├─ cpuhp_setup_state_nocalls()      // 初始化KVM框架
+ |   ├─ register_reboot_notifier()       // 初始化KVM框架
+ |   ├─ kvm_cache_create_usercopy()      // 初始化KVM框架
+ |   ├─ kvm_async_pf_init()              // 初始化KVM框架
+ |   ├─ misc_register()                  // 注册字符设备文件/dev/kvm 
+ |   ├─ register_syscore_ops()           // 初始化KVM框架
+ |   ├─ kvm_init_debug()                 // 初始化KVM框架
+ |   └─ kvm_vfio_ops_init()
  ├─ vmx_setup_l1d_flush()                // 初始化KVM框架
  └─ vmx_check_vmcs12_offsets()
 ```
+
