--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -9,7 +9,7 @@
 ```
 vmx_init()                               // kvm-intel.ko模块初始化
  ├─ kvm_init(KVM_GET_API_VERSION)        // 初始化KVM框架
- |   ├─ kvm_arch_init()                  // 初始化KVM框架
+ |   ├─ kvm_arch_init()                  // 架构相关初始化
  |   ├─ kvm_irqfd_init()                 // 初始化KVM框架
  |   ├─ kvm_arch_hardware_setup()        // 初始化KVM框架
  |   ├─ smp_call_function_single()       // 对每个online cpu
@@ -24,4 +24,8 @@ vmx_init()                               // kvm-intel.ko模块初始化
  ├─ vmx_setup_l1d_flush()                // 初始化KVM框架
  └─ vmx_check_vmcs12_offsets()
 ```
+
+vmx_init将
+
+# kvm_init: 初始化kvm框架
 
