--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -10,6 +10,7 @@
 vmx_init()                               // kvm-intel.ko模块初始化
  ├─ kvm_init(KVM_GET_API_VERSION)        // 初始化KVM框架
  |   ├─ kvm_arch_init()                  // 架构相关初始化
+ |   |   ├─cpu_has_kvm_support()         // 架构相关初始化
  |   ├─ kvm_irqfd_init()                 // 初始化KVM框架
  |   ├─ kvm_arch_hardware_setup()        // 初始化KVM框架
  |   ├─ smp_call_function_single()       // 对每个online cpu
@@ -25,7 +26,20 @@ vmx_init()                               // kvm-intel.ko模块初始化
  └─ vmx_check_vmcs12_offsets()
 ```
 
-vmx_init将
-
 # kvm_init: 初始化kvm框架
 
+`vmx_init()`将自己的`vmx_x86_ops`作为参数传了进去
+
+```cpp
+r = kvm_init(&vmx_x86_ops, sizeof(struct vcpu_vmx), __alignof__(struct vcpu_vmx), THIS_MODULE);
+```
+
+正式进行KVM框架初始化
+
+## 架构初始化
+
+使用传入的`vmx_x86_ops`参数, 先架构初始化
+
+```cpp
+r = kvm_arch_init(opaque);
+```
