--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -7,10 +7,13 @@
 ![2019-12-11-11-04-37.png](./images/2019-12-11-11-04-37.png)
 
 ```
-vmx_init()                               // kvm-intel.ko模块初始化
+vmx_init()                               // 初始化入口
  ├─ kvm_init(KVM_GET_API_VERSION)        // 初始化KVM框架
  |   ├─ kvm_arch_init()                  // 架构相关初始化
- |   |   ├─cpu_has_kvm_support()         // 架构相关初始化
+ |   |   ├─cpu_has_kvm_support()         // CPU是否支持kvm 
+ |   |   ├─disabled_by_bios()            // bios是否禁用vt
+ |   |   ├─boot_cpu_has()                // CPU是否支持一些特性
+ |   |   ├─kmem_cache_create()           // 
  |   ├─ kvm_irqfd_init()                 // 初始化KVM框架
  |   ├─ kvm_arch_hardware_setup()        // 初始化KVM框架
  |   ├─ smp_call_function_single()       // 对每个online cpu
@@ -28,6 +31,8 @@ vmx_init()                               // kvm-intel.ko模块初始化
 
 # kvm_init: 初始化kvm框架
 
+vmx.c定义了vmx的架构下的操作函数, 其他架构也有自己的定义
+
 `vmx_init()`将自己的`vmx_x86_ops`作为参数传了进去
 
 ```cpp
@@ -43,3 +48,7 @@ r = kvm_init(&vmx_x86_ops, sizeof(struct vcpu_vmx), __alignof__(struct vcpu_vmx)
 ```cpp
 r = kvm_arch_init(opaque);
 ```
+
+先功能性检查, 
+
+### 
