--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -13,7 +13,10 @@ vmx_init()                               // 初始化入口
  |   |   ├─cpu_has_kvm_support()         // CPU是否支持kvm 
  |   |   ├─disabled_by_bios()            // bios是否禁用vt
  |   |   ├─boot_cpu_has()                // CPU是否支持一些特性
- |   |   ├─kmem_cache_create()           // 
+ |   |   ├─kmem_cache_create("x86_fpu")  // 
+ |   |   ├─alloc_percpu()                // CPU是否支持一些特性
+ |   |   ├─kvm_mmu_module_init()         // CPU是否支持一些特性
+ |   |   ├─kvm_timer_init()              // CPU是否支持一些特性
  |   ├─ kvm_irqfd_init()                 // 初始化KVM框架
  |   ├─ kvm_arch_hardware_setup()        // 初始化KVM框架
  |   ├─ smp_call_function_single()       // 对每个online cpu
@@ -23,7 +26,7 @@ vmx_init()                               // 初始化入口
  |   ├─ kvm_async_pf_init()              // 初始化KVM框架
  |   ├─ misc_register()                  // 注册字符设备文件/dev/kvm 
  |   ├─ register_syscore_ops()           // 初始化KVM框架
- |   ├─ kvm_init_debug()                 // 初始化KVM框架
+ |   ├─ kvm_init_debug()                 // 创建debug entry
  |   └─ kvm_vfio_ops_init()
  ├─ vmx_setup_l1d_flush()                // 初始化KVM框架
  └─ vmx_check_vmcs12_offsets()
@@ -31,7 +34,7 @@ vmx_init()                               // 初始化入口
 
 # kvm_init: 初始化kvm框架
 
-vmx.c定义了vmx的架构下的操作函数, 其他架构也有自己的定义
+vmx.c定义了vmx的架构下的操作函数`vmx_x86_ops`, 其他架构也有自己的定义
 
 `vmx_init()`将自己的`vmx_x86_ops`作为参数传了进去
 
@@ -43,7 +46,7 @@ r = kvm_init(&vmx_x86_ops, sizeof(struct vcpu_vmx), __alignof__(struct vcpu_vmx)
 
 ## 架构初始化
 
-使用传入的`vmx_x86_ops`参数, 先架构初始化
+使用传入的`vmx_x86_ops`参数, 注意这是`void *`类型的
 
 ```cpp
 r = kvm_arch_init(opaque);
