--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -17,6 +17,7 @@ vmx_init()                               // 初始化入口
  |   |   ├─alloc_percpu()                // CPU是否支持一些特性
  |   |   ├─kvm_mmu_module_init()         // CPU是否支持一些特性
  |   |   ├─kvm_timer_init()              // CPU是否支持一些特性
+ |   |   ├─kvm_lapic_init()              // CPU是否支持一些特性
  |   ├─ kvm_irqfd_init()                 // 初始化KVM框架
  |   ├─ kvm_arch_hardware_setup()        // 初始化KVM框架
  |   ├─ smp_call_function_single()       // 对每个online cpu
