--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -16,6 +16,7 @@ vmx_init()                               // 初始化入口
  |   |   ├─kmem_cache_create("x86_fpu")  // 
  |   |   ├─alloc_percpu()                // CPU是否支持一些特性
  |   |   ├─kvm_mmu_module_init()         // CPU是否支持一些特性
+ |   |   ├─kvm_mmu_set_mask_ptes()       // CPU是否支持一些特性
  |   |   ├─kvm_timer_init()              // CPU是否支持一些特性
  |   |   ├─kvm_lapic_init()              // CPU是否支持一些特性
  |   ├─ kvm_irqfd_init()                 // 初始化KVM框架
