--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -26,7 +26,7 @@ vmx_init()                               // 初始化入口
  |   ├─ register_reboot_notifier()       // 初始化KVM框架
  |   ├─ kvm_cache_create_usercopy()      // 初始化KVM框架
  |   ├─ kvm_async_pf_init()              // 初始化KVM框架
- |   ├─ misc_register()                  // 注册字符设备文件/dev/kvm 
+ |   ├─ misc_register(&kvm_dev)          // 注册字符设备文件/dev/kvm 
  |   ├─ register_syscore_ops()           // 初始化KVM框架
  |   ├─ kvm_init_debug()                 // 创建debug entry
  |   └─ kvm_vfio_ops_init()
@@ -57,3 +57,18 @@ r = kvm_arch_init(opaque);
 先功能性检查, 
 
 ### 
+
+## 注册设备文件
+
+`misc_register`函数是linux内核的一个通用接口，主要作用是为了注册设备文件，kvm模块借用该接口创建了`/dev/kvm`设备文件
+
+下面是设备文件的结构体
+
+```cpp
+// virt/kvm/kvm_main.c
+static struct miscdevice kvm_dev = {
+    KVM_MINOR,
+    "kvm",
+    &kvm_chardev_ops,
+}
+```
