--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -28,7 +28,7 @@ vmx_init()                               // 初始化入口
  |   ├─ kvm_async_pf_init()              // 初始化KVM框架
  |   ├─ misc_register(&kvm_dev)          // 注册字符设备文件/dev/kvm 
  |   ├─ register_syscore_ops()           // 初始化KVM框架
- |   ├─ kvm_init_debug()                 // 创建debug entry
+ |   ├─ kvm_init_debug()                 // 初始化debugfs信息
  |   └─ kvm_vfio_ops_init()
  ├─ vmx_setup_l1d_flush()                // 初始化KVM框架
  └─ vmx_check_vmcs12_offsets()
@@ -66,9 +66,15 @@ r = kvm_arch_init(opaque);
 
 ```cpp
 // virt/kvm/kvm_main.c
+static struct file_operations kvm_chardev_ops = {
+    .unlocked_ioctl = kvm_dev_ioctl,
+    .llseek         = noop_llseek,
+    KVM_COMPAT(kvm_dev_ioctl),
+};
 static struct miscdevice kvm_dev = {
     KVM_MINOR,
     "kvm",
     &kvm_chardev_ops,
-}
+};
 ```
+
