--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -4,6 +4,8 @@
 
 `Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md`
 
+`Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md`
+
 ![2019-12-11-11-04-37.png](./images/2019-12-11-11-04-37.png)
 
 ```
@@ -60,7 +62,12 @@ r = kvm_arch_init(opaque);
 
 ## 注册设备文件
 
-`misc_register`函数是linux内核的一个通用接口，主要作用是为了注册设备文件，kvm模块借用该接口创建了`/dev/kvm`设备文件
+```cpp
+misc_register(&kvm_dev);
+```
+
+`misc_register`函数是linux内核的一个通用接口，主要作用是为了**注册设备文件**，kvm模块借用该接口创建了`/dev/kvm`设备文件
+
 
 下面是设备文件的结构体
 
@@ -77,4 +84,3 @@ static struct miscdevice kvm_dev = {
     &kvm_chardev_ops,
 };
 ```
-
