--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
@@ -206,6 +206,24 @@ EXPORT_SYMBOL_GPL(kvm_x86_ops);
 
 **kvm\_chardev\_ops**的定义在**virt/kvm/kvm\_main.c**中，代码如下：
 
+`misc_register`函数是linux内核的一个通用接口，主要作用是为了**注册设备文件**，kvm模块借用该接口创建了`/dev/kvm`设备文件
+
+下面是设备文件的结构体
+
+```cpp
+// virt/kvm/kvm_main.c
+static struct file_operations kvm_chardev_ops = {
+    .unlocked_ioctl = kvm_dev_ioctl,
+    .llseek         = noop_llseek,
+    KVM_COMPAT(kvm_dev_ioctl),
+};
+static struct miscdevice kvm_dev = {
+    KVM_MINOR,
+    "kvm",
+    &kvm_chardev_ops,
+};
+```
+
 代码5\-4 kvm\_chardev\_ops
 ￼
 ```
