--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -2,6 +2,8 @@
 
 # 整体介绍
 
+核心数据结构和主要流程见:
+
 `Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md`
 
 `Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md`
@@ -66,8 +68,7 @@ r = kvm_arch_init(opaque);
 misc_register(&kvm_dev);
 ```
 
-`misc_register`函数是linux内核的一个通用接口，主要作用是为了**注册设备文件**，kvm模块借用该接口创建了`/dev/kvm`设备文件
-
+`misc_register`函数是linux内核的一个通用接口，主要作用是为了**注册设备文件**，kvm模块借用该接口创建了`/dev/kvm`设备文件, 具体查看参看的文章(`KVM实战: 原理、进阶与性能调优`的)
 
 下面是设备文件的结构体
 
