--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -4,6 +4,8 @@
 <!-- code_chunk_output -->
 
 - [1. KVM模块初始化流程](#1-kvm模块初始化流程)
+- [相关](#相关)
+  - [kvm_dev_ioctl](#kvm_dev_ioctl)
 - [2. 虚拟机的创建](#2-虚拟机的创建)
   - [2.1. 虚拟机创建过程kvm_dev_ioctl_create_vm](#21-虚拟机创建过程kvm_dev_ioctl_create_vm)
     - [2.1.1. kvm_create_vm流程](#211-kvm_create_vm流程)
@@ -51,6 +53,53 @@ KVM的初始化步骤分为以下三步。
 
 3）进行后续的硬件初始化准备操作。
 
+# 相关
+
+
+
+## kvm_dev_ioctl
+
+`/dev/kvm`的ioctl的接口`kvm_dev_ioctl`主要提供了创建vm和校验版本号的功能
+
+```cpp
+static long kvm_dev_ioctl(struct file *filp,
+			  unsigned int ioctl, unsigned long arg)
+{
+	long r = -EINVAL;
+
+	switch (ioctl) {
+	case KVM_GET_API_VERSION:             //获取api版本
+		if (arg)
+			goto out;
+		r = KVM_API_VERSION;
+		break;
+	case KVM_CREATE_VM:                    //创建VM，返回vmfd
+		r = kvm_dev_ioctl_create_vm(arg);
+		break;
+	case KVM_CHECK_EXTENSION:
+		r = kvm_vm_ioctl_check_extension_generic(NULL, arg);
+		break;
+	case KVM_GET_VCPU_MMAP_SIZE:
+		if (arg)
+			goto out;
+		r = PAGE_SIZE;     /* struct kvm_run */
+#ifdef CONFIG_X86
+		r += PAGE_SIZE;    /* pio data page */
+#endif
+#ifdef KVM_COALESCED_MMIO_PAGE_OFFSET
+		r += PAGE_SIZE;    /* coalesced mmio ring page */
+#endif
+		break;
+
+	default:
+		return kvm_arch_dev_ioctl(filp, ioctl, arg); //默认创建设备
+	}
+out:
+	return r;
+}
+```
+
+
 # 2. 虚拟机的创建
 
 基于KVM的虚拟机创建分为**虚拟机创建**和**虚拟CPU创建**两个步骤。
@@ -59,7 +108,7 @@ KVM的初始化步骤分为以下三步。
 
 ## 2.1. 虚拟机创建过程kvm_dev_ioctl_create_vm
 
-**打开/dev/kvm** 文件并且获得**文件描述符 fd** 后，通过 ioctl 指令写入KVM\_CREATE\_VM，即可创建一个 VM 虚拟。
+**打开/dev/kvm** 文件并且获得**文件描述符 fd** 后，通过 ioctl 指令写入KVM\_CREATE\_VM，即可创建一个 VM 虚拟机。
 
 KVM 的**该部分代码**实现在**kvm\_dev** 的 **file\_operation 结构体**中，对应的代码在 **kvm\_main.c** 中调用 **kvm\_dev\_ioctl\_create\_vm**函数实现，其代码如下：
 
