--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -9,15 +9,15 @@
   - [3.1. 虚拟机创建过程kvm_dev_ioctl_create_vm](#31-虚拟机创建过程kvm_dev_ioctl_create_vm)
     - [3.1.1. kvm_create_vm流程](#311-kvm_create_vm流程)
     - [3.1.2. 返回kvm_vm的fd文件描述符](#312-返回kvm_vm的fd文件描述符)
-- [](#)
-- [4. vCPU的创建](#4-vcpu的创建)
-  - [4.1. vCPU的创建过程kvm_vm_ioctl_create_vcpu](#41-vcpu的创建过程kvm_vm_ioctl_create_vcpu)
-    - [4.1.1. kvm_arch_vcpu_create创建kvm_vcpu](#411-kvm_arch_vcpu_create创建kvm_vcpu)
-    - [4.1.2. kvm_arch_vcpu_setup初始化kvm_vcpu](#412-kvm_arch_vcpu_setup初始化kvm_vcpu)
-    - [4.1.3. vCPU检测](#413-vcpu检测)
-    - [4.1.4. 创建vcpu_fd](#414-创建vcpu_fd)
-    - [4.1.5. 释放内核锁和返回vcpu_fd](#415-释放内核锁和返回vcpu_fd)
-- [5. vCPU的运行](#5-vcpu的运行)
+- [4. 虚拟机fd的ioctl接口kvm_vm_ioctl](#4-虚拟机fd的ioctl接口kvm_vm_ioctl)
+- [5. vCPU的创建](#5-vcpu的创建)
+  - [5.1. vCPU的创建过程kvm_vm_ioctl_create_vcpu](#51-vcpu的创建过程kvm_vm_ioctl_create_vcpu)
+    - [5.1.1. kvm_arch_vcpu_create创建kvm_vcpu](#511-kvm_arch_vcpu_create创建kvm_vcpu)
+    - [5.1.2. kvm_arch_vcpu_setup初始化kvm_vcpu](#512-kvm_arch_vcpu_setup初始化kvm_vcpu)
+    - [5.1.3. vCPU检测](#513-vcpu检测)
+    - [5.1.4. 创建vcpu_fd](#514-创建vcpu_fd)
+    - [5.1.5. 释放内核锁和返回vcpu_fd](#515-释放内核锁和返回vcpu_fd)
+- [6. vCPU的运行](#6-vcpu的运行)
 
 <!-- /code_chunk_output -->
 
@@ -244,9 +244,17 @@ static struct kvm *kvm_create_vm(unsigned long type)
 
 通过anon\_inode\_getfd获得的**fd文件描述符**，就是供**用户态**使用的**vm\_fd**，用户态将通过该fd进行进一步的虚拟机操作，首先要做的事情是**初始化vCPU**。
 
-# 
+# 4. 虚拟机fd的ioctl接口kvm_vm_ioctl
 
-# 4. vCPU的创建
+上面调用后会得到虚拟机的fd, 对应的ioctl是`kvm_vm_ioctl()`
+
+```cpp
+// virt/kvm/kvm_main.c
+static long kvm_vm_ioctl(struct file *filp,
+			   unsigned int ioctl, unsigned long arg)
+```
+
+# 5. vCPU的创建
 
 创建vCPU实际上就是**创建vCPU的描述符**，在KVM中，**vCPU对应的数据结构体**为**kvm\_vcpu**。因此，创建vCPU的描述符，简单来说就是**分配相应大小的内存**，并且进行相应的**初始化**工作。kvm\_vcpu中描述符包含的内容有很多，通常会包含各个**平台通用的内容**和**平台相关的内容**。
 
@@ -259,7 +267,7 @@ static struct kvm *kvm_create_vm(unsigned long type)
 - 初始化 kvm\_vcpu 的**状态信息**，设置 kvm\_vcpu 在被调度前需要配置的必要标志。
 - 初始化额外的信息，并且配置**apic等虚拟化组件**。
 
-## 4.1. vCPU的创建过程kvm_vm_ioctl_create_vcpu
+## 5.1. vCPU的创建过程kvm_vm_ioctl_create_vcpu
 
 接下来讲述KVM中**vCPU的创建过程**。
 
@@ -267,7 +275,7 @@ static struct kvm *kvm_create_vm(unsigned long type)
 
 代码5-10 kvm\_vm_ioctl\_create\_vcpu代码
 
-```c
+```cpp
 // virt/kvm/kvm_main.c
 ￼(1366)   static int kvm_vm_ioctl_create_vcpu(struct kvm *kvm, u32 id)￼
 (1367)   {￼
@@ -324,7 +332,7 @@ static struct kvm *kvm_create_vm(unsigned long type)
 (1418)   }
 ```
 
-### 4.1.1. kvm_arch_vcpu_create创建kvm_vcpu
+### 5.1.1. kvm_arch_vcpu_create创建kvm_vcpu
 
 首先，在1371行，调用**kvm\_arch\_vcpu\_create**函数创建一个**kvm\_vcpu结构体！！！**。该创建内容**与架构相关**，因此，直接调用**kvm\_x86\_ops**中的create\_vcpu方法执行。
 
@@ -338,36 +346,36 @@ static struct kvm *kvm_create_vm(unsigned long type)
 - 接着**初始化MSR！！！** 和**VMCS！！！等寄存器**，(**每个VCPU都有**)
 - 最后完成**I/O**和**内存部分寄存器的初始化**，为被**初次调度运行**做好准备。
 
-### 4.1.2. kvm_arch_vcpu_setup初始化kvm_vcpu
+### 5.1.2. kvm_arch_vcpu_setup初始化kvm_vcpu
 
 其次，在1377行调用**kvm\_arch\_vcpu\_setup**函数对**kvm\_vcpu**中的数据结构进行**初始化**。
 
 这里将先调用**kvm\_x86\_ops**中的**put\_vcpu函数**，实现将**vCPU的参数信息**加载入**CPU**中，并且执行**MMU初始化**和**CPU复位操作**。
 
-### 4.1.3. vCPU检测
+### 5.1.3. vCPU检测
 
 在 1381～1391 行中，进行了**两个检测**。
 
 - 第一个是检测到如果**当前的 vCPU数量**已经达到了**系统设置的上限** **KVM\_MAX\_VCPU**，则将销毁刚才创建的实例。
 - 第二个是如果**当前的vCPU**创建出来已经加入了**某一个已有的KVM主机**，则也将销毁该实例。
 
-### 4.1.4. 创建vcpu_fd
+### 5.1.4. 创建vcpu_fd
 
 然后，在 1396～1405 行，会创建**当前 vCPU** 对应的文件描述符 **vcpu\_fd**，并且将**kvm\_vcpu**添加入**KVM**的**vCPU数组**中。
 
 这里有一个特别之处，是使用了 atom\_read 和 atom\_inc 宏，这两个宏能够保证在进行 KVM 虚拟机的 vCPU添加时按照给定的顺序，不会因为执行中途的中断、进程切换等方式导致添加到不正确的kvm\_vcpu数组中。
 
-### 4.1.5. 释放内核锁和返回vcpu_fd
+### 5.1.5. 释放内核锁和返回vcpu_fd
 
 最后，释放掉所有的内核锁，完成本次vCPU的创建工作。
 
 返回**vcpu\_fd**
 
-# 5. vCPU的运行
+# 6. vCPU的运行
 
 在创建完**VM**和**vCPU**并且完成了**初始化工作**之后，就可以通过**调度程序调度执行**。因为在Linux中，KVM虚拟机作为一个**系统线程**运行，因此，KVM虚拟机的调度程序实际上也就是Linux的调度程序，具体的调度将在后文qemu部分进行讨论，在当前，**KVM的调用**是从ioctl的**KVM\_RUN指令**字开始的。
 
-```c
+```cpp
 // virt/kvm/kvm_main.c
 static long kvm_vcpu_ioctl(struct file *filp,
 			   unsigned int ioctl, unsigned long arg)
@@ -408,6 +416,18 @@ static long kvm_vcpu_ioctl(struct file *filp,
 
 **执行vCPU**的请求首先发送到**kvm\_vcpu\_ioctl函数**中，然后**加载vCPU参数**，调用**kvm\_arch\_vcpu\_ioctl\_run**函数进入**具体的vCPU运行**环节。(arch/x86/kvm/x86.c)
 
+```
+kvm_arch_vcpu_ioctl_run()                // vcpu运行
+ ├─ kvm_init(KVM_GET_API_VERSION)        // 初始化KVM框架
+ |   ├─ kvm_arch_init()                  // 架构相关初始化
+ |   |   ├─cpu_has_kvm_support()         // CPU是否支持kvm 
+ |   |   ├─disabled_by_bios()            // bios是否禁用vt
+ |   |   ├─boot_cpu_has()                // CPU是否支持一些特性
+ |   |   ├─kmem_cache_create("x86_fpu")  // 
+ |   |   ├─alloc_percpu()                // CPU是否支持一些特性
+ |   |   ├─kvm_mmu_module_init()         // CPU是否支持一些特性
+```
+
 1）通过调用**sigprocmask函数**，保证在**vCPU的初始化**过程中，不会因为来自**其他线程的信号干扰而中断**。
 
 2）将**vCPU的状态**切换为**KVM\_MP\_STATE\_UNINITIALIZED**。
@@ -424,7 +444,7 @@ static long kvm_vcpu_ioctl(struct file *filp,
 
 代码5\-11 \_vcpu\_run函数
 
-```c
+```cpp
 // arch/x86/kvm/x86.c
 (5232)   static int __vcpu_run(struct kvm_vcpu *vcpu)￼
 (5233)   {￼
