--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -417,15 +417,14 @@ static long kvm_vcpu_ioctl(struct file *filp,
 **执行vCPU**的请求首先发送到**kvm\_vcpu\_ioctl函数**中，然后**加载vCPU参数**，调用**kvm\_arch\_vcpu\_ioctl\_run**函数进入**具体的vCPU运行**环节。(arch/x86/kvm/x86.c)
 
 ```
-kvm_arch_vcpu_ioctl_run()                // vcpu运行
- ├─ kvm_init(KVM_GET_API_VERSION)        // 初始化KVM框架
- |   ├─ kvm_arch_init()                  // 架构相关初始化
- |   |   ├─cpu_has_kvm_support()         // CPU是否支持kvm 
- |   |   ├─disabled_by_bios()            // bios是否禁用vt
- |   |   ├─boot_cpu_has()                // CPU是否支持一些特性
- |   |   ├─kmem_cache_create("x86_fpu")  // 
- |   |   ├─alloc_percpu()                // CPU是否支持一些特性
- |   |   ├─kvm_mmu_module_init()         // CPU是否支持一些特性
+kvm_arch_vcpu_ioctl_run()                	// vcpu运行
+ ├─kvm_sigset_activate(vcpu)                // 
+ ├─kvm_load_guset_fpu()         			//  
+ ├─vcpu_run()            					// 死循环进入vcpu_enter_guest
+ |	├─vcpu_enter_guest()                	// 准备guestos的运行上下文
+ |	|	├─kvm_x86_ops->run(vcpu)  			// 这里会调用vmx_vcpu_run
+ |	|	├─kvm_x86_ops->handle_exit(vcpu)	// vmexit的处理
+ ├─         								// 
 ```
 
 1）通过调用**sigprocmask函数**，保证在**vCPU的初始化**过程中，不会因为来自**其他线程的信号干扰而中断**。
