--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -4,6 +4,7 @@
 <!-- code_chunk_output -->
 
 - [1. KVM模块初始化流程](#1-kvm模块初始化流程)
+- [QEMU与KVM交互](#qemu与kvm交互)
 - [2. /dev/kvm的ioctl接口kvm_dev_ioctl](#2-devkvm的ioctl接口kvm_dev_ioctl)
 - [3. 虚拟机的创建](#3-虚拟机的创建)
   - [3.1. 虚拟机创建过程kvm_dev_ioctl_create_vm](#31-虚拟机创建过程kvm_dev_ioctl_create_vm)
@@ -52,6 +53,44 @@ KVM的初始化步骤分为以下三步。
 * 最后初始化**debugfs**的调试信息。
 
 3）进行后续的硬件初始化准备操作。
+
+# QEMU与KVM交互
+
+KVM内核模块加载之后只提供了一个对外接口/dev/kvm，qemu通过/dev/kvm文件依次创建vm句柄和vcpu句柄来和kvm交互。
+
+所以存在三种句柄: KVM访问句柄、虚拟机访问句柄和vCPU访问句柄
+
+![2019-12-11-15-33-58.png](./images/2019-12-11-15-33-58.png)
+
+整体流程是:
+
+```
+qemu_open("/dev/kvm", O_RDWR); //KVM访问句柄
+kvm_ioctl(s, KVM_GET_API_VERSION, 0);
+kvm_ioctl(s,KVM_CREATE_VM, 0); //创建vm访问句柄
+kvm_arch_init ==>
+kvm_vm_ioctl(s,KVM_SET_IDENTITY_MAP_ADDR, &identity_base）
+
+           kvm_vm_ioctl(s,KVM_SET_TSS_ADDR, identity_base + 0x1000)
+
+           kvm_vm_ioctl(s,KVM_SET_NR_MMU_PAGES, shadow_mem)
+==>kvm_irqchip_create(s) ==> kvm_vm_ioctl(s, KVM_CREATE_IRQCHIP)
+
+kvm_init_vcpu(env);
+==> kvm_vm_ioctl(s, KVM_CREATE_VCPU, env->cpu_index);创建vcpu句柄
+
+	kvm_cpu_exec
+	==>kvm_vcpu_ioctl(env, KVM_RUN, 0);
+	
+	//根据Exit的原因处理VM-Exit
+
+       switch (run->exit_reason) {
+
+       case KVM_EXIT_IO: //VM Exit Cause by IO operation
+
+           kvm_handle_io();
+
+```
 
 # 2. /dev/kvm的ioctl接口kvm_dev_ioctl
 
