--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第6章 qemu-kvm原理与分析/3. 基于KVM的QEMU PC Emulator.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第6章 qemu-kvm原理与分析/3. 基于KVM的QEMU PC Emulator.md
@@ -279,9 +279,15 @@ this persistent */￼
 
 # 2 基于KVM加速支持的CPU虚拟化模块
 
+KVM是基于硬件虚拟化实现的，从之前的内核模块截图中也能看到，真实的虚拟化实现在intel_kvm.ko中。
+硬件虚拟化中将运行模式分为root模式和non-root模式，每个模式都保留了ring0-3的优先级，通过降低模式切换的开销来提升虚拟化的性能。
+
+
 KVM的vCPU执行流程从架构上看，其示意图如图6\-5所示。
 ￼
 图6\-5 KVM的CPU执行架构
+
+![2019-12-11-15-40-50.png](./images/2019-12-11-15-40-50.png)
 
 ![2019-07-06-13-08-24.png](./images/2019-07-06-13-08-24.png)
 
