--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -40,6 +40,8 @@ vmx_init()                               // 初始化入口
 
 # kvm_init: 初始化kvm框架
 
+在`virt/kvm/kvm_main.c`中
+
 vmx.c定义了vmx的架构下的操作函数`vmx_x86_ops`, 其他架构也有自己的定义
 
 `vmx_init()`将自己的`vmx_x86_ops`作为参数传了进去
@@ -85,3 +87,13 @@ static struct miscdevice kvm_dev = {
     &kvm_chardev_ops,
 };
 ```
+
+## debugfs初始化
+
+```cpp
+kvm_init_debug();
+```
+
+kvm模块的加载依赖debugfs,所以在加载之前要手动挂载.
+
+这个函数建立了debugfs目录下的kvm目录,然后建立了一系列复杂的tracepoint
