--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -32,9 +32,9 @@ vmx_init()                               // 初始化入口
  |   ├─ kvm_async_pf_init()              // 初始化KVM框架
  |   ├─ misc_register(&kvm_dev)          // 注册字符设备文件/dev/kvm 
  |   ├─ register_syscore_ops()           // 初始化KVM框架
- |   ├─ kvm_init_debug()                 // 初始化debugfs信息
+ |   ├─ kvm_init_debug()                 // 初始化debugfs
  |   └─ kvm_vfio_ops_init()
- ├─ vmx_setup_l1d_flush()                // 初始化KVM框架
+ ├─ vmx_setup_l1d_flush()                // 
  └─ vmx_check_vmcs12_offsets()
 ```
 
@@ -88,6 +88,8 @@ static struct miscdevice kvm_dev = {
 };
 ```
 
+
+
 ## debugfs初始化
 
 ```cpp
@@ -97,3 +99,29 @@ kvm_init_debug();
 kvm模块的加载依赖debugfs,所以在加载之前要手动挂载.
 
 这个函数建立了debugfs目录下的kvm目录,然后建立了一系列复杂的tracepoint
+
+```cpp
+// virt/kvm/kvm_main.c
+static int kvm_init_debug(void)
+{
+	int r = -EEXIST;
+	struct kvm_stats_debugfs_item *p;
+
+	kvm_debugfs_dir = debugfs_create_dir("kvm", NULL);
+
+	kvm_debugfs_num_entries = 0;
+	for (p = debugfs_entries; p->name; ++p, kvm_debugfs_num_entries++) {
+		if (!debugfs_create_file(p->name, 0444, kvm_debugfs_dir,
+					 (void *)(long)p->offset,
+					 stat_fops[p->kind]))
+			goto out_dir;
+	}
+}
+```
+
+目前支持的tracepoint有:
+
+```cpp
+// arch/x86/kvm/x86.c
+struct kvm_stats_debugfs_item debugfs_entries[] = {
+```
