--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -31,7 +31,7 @@ vmx_init()                               // 初始化入口
  |   ├─ kvm_cache_create_usercopy()      // 初始化KVM框架
  |   ├─ kvm_async_pf_init()              // 初始化KVM框架
  |   ├─ misc_register(&kvm_dev)          // 注册字符设备文件/dev/kvm 
- |   ├─ register_syscore_ops()           // 初始化KVM框架
+ |   ├─ register_syscore_ops()           // 注册系统核心函数, 这里是suspend和resume
  |   ├─ kvm_init_debug()                 // 初始化debugfs
  |   └─ kvm_vfio_ops_init()
  ├─ vmx_setup_l1d_flush()                // 
@@ -88,7 +88,31 @@ static struct miscdevice kvm_dev = {
 };
 ```
 
+## 动作注册
 
+```cpp
+register_syscore_ops(&kvm_syscore_ops);
+
+kvm_preempt_ops.sched_in = kvm_sched_in;
+kvm_preempt_ops.sched_out = kvm_sched_out;
+```
+
+从命名看, `kvm_syscore_ops`是系统核心函数, 包含`suspend`和`resume`:
+
+```cpp
+static struct syscore_ops kvm_syscore_ops = {
+	.suspend = kvm_suspend,
+	.resume = kvm_resume,
+};
+```
+
+`kvm_preempt_ops`是结构体`preempt_ops`:
+
+```cpp
+static __read_mostly struct preempt_ops kvm_preempt_ops;
+```
+
+从命名看, `sched_in`和`sched_out`可以申请调度器对任务的换入换出.
 
 ## debugfs初始化
 
