--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -62,7 +62,17 @@ r = kvm_arch_init(opaque);
 
 先功能性检查, 
 
-### 
+## 
+
+```cpp
+kvm_chardev_ops.owner = module;
+kvm_vm_fops.owner = module;
+kvm_vcpu_fops.owner = module;
+```
+
+这三个变量都是`file_operation`结构体被**部分初始化**的**全局变量**, 分别用于处理**对不同介质的设备读写**(一切皆是文件). 
+
+被部分初始化的函数入口地址分别指向`kvm_dev_ioctl`, `kvm_vm_release`,`noop_llseek`等函数(`kvm_main.c`)
 
 ## 注册设备文件/dev/kvm
 
@@ -100,10 +110,22 @@ kvm_preempt_ops.sched_out = kvm_sched_out;
 从命名看, `kvm_syscore_ops`是系统核心函数, 包含`suspend`和`resume`:
 
 ```cpp
+// virt/kvm/kvm_main.c
 static struct syscore_ops kvm_syscore_ops = {
 	.suspend = kvm_suspend,
 	.resume = kvm_resume,
 };
+
+// drivers/base/syscore.c
+static LIST_HEAD(syscore_ops_list);
+
+void register_syscore_ops(struct syscore_ops *ops)
+{
+	mutex_lock(&syscore_ops_lock);
+	list_add_tail(&ops->node, &syscore_ops_list);
+	mutex_unlock(&syscore_ops_lock);
+}
+EXPORT_SYMBOL_GPL(register_syscore_ops);
 ```
 
 `kvm_preempt_ops`是结构体`preempt_ops`:
