--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -27,9 +27,9 @@ vmx_init()                               // 初始化入口
  |   ├─ kvm_arch_hardware_setup()        // 初始化KVM框架
  |   ├─ smp_call_function_single()       // 对每个online cpu
  |   ├─ cpuhp_setup_state_nocalls()      // 初始化KVM框架
- |   ├─ register_reboot_notifier()       // 初始化KVM框架
- |   ├─ kvm_cache_create_usercopy()      // 初始化KVM框架
- |   ├─ kvm_async_pf_init()              // 初始化KVM框架
+ |   ├─ register_reboot_notifier()       // 注册reboot时候的通知函数
+ |   ├─ kvm_cache_create_usercopy()      // 
+ |   ├─ kvm_async_pf_init()              // 
  |   ├─ misc_register(&kvm_dev)          // 注册字符设备文件/dev/kvm 
  |   ├─ register_syscore_ops()           // 注册系统核心函数, 这里是suspend和resume
  |   ├─ kvm_init_debug()                 // 初始化debugfs
@@ -62,7 +62,15 @@ r = kvm_arch_init(opaque);
 
 先功能性检查, 
 
-## 
+## 注册reboot时候的通知函数
+
+```
+
+```
+
+## 赋值file_operations的模块名
+
+把早先传给kvm_init()的参数THIS_MODULE,也就是vmx的模块名分别赋值给三个file operation结构体变量:
 
 ```cpp
 kvm_chardev_ops.owner = module;
@@ -72,7 +80,35 @@ kvm_vcpu_fops.owner = module;
 
 这三个变量都是`file_operation`结构体被**部分初始化**的**全局变量**, 分别用于处理**对不同介质的设备读写**(一切皆是文件). 
 
-被部分初始化的函数入口地址分别指向`kvm_dev_ioctl`, `kvm_vm_release`,`noop_llseek`等函数(`kvm_main.c`)
+被部分初始化的**函数入口地址**分别指向`kvm_dev_ioctl`, `kvm_vm_release`,`noop_llseek`等函数(`kvm_main.c`)
+
+```cpp
+// virt/kvm/kvm_main.c
+static struct file_operations kvm_vcpu_fops = {
+	.release        = kvm_vcpu_release,
+	.unlocked_ioctl = kvm_vcpu_ioctl,
+#ifdef CONFIG_COMPAT
+	.compat_ioctl   = kvm_vcpu_compat_ioctl,
+#endif
+	.mmap           = kvm_vcpu_mmap,
+	.llseek		= noop_llseek,
+};
+
+static struct file_operations kvm_vm_fops = {
+	.release        = kvm_vm_release,
+	.unlocked_ioctl = kvm_vm_ioctl,
+#ifdef CONFIG_COMPAT
+	.compat_ioctl   = kvm_vm_compat_ioctl,
+#endif
+	.llseek		= noop_llseek,
+};
+
+static struct file_operations kvm_chardev_ops = {
+	.unlocked_ioctl = kvm_dev_ioctl,
+	.compat_ioctl   = kvm_dev_ioctl,
+	.llseek		= noop_llseek,
+};
+```
 
 ## 注册设备文件/dev/kvm
 
