--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -62,11 +62,21 @@ r = kvm_arch_init(opaque);
 
 先功能性检查, 
 
+## 注册CPU状态变化的通知函数
+
+```
+r = register_cpu_notifier(&kvm_cpu_notifier);
+```
+
 ## 注册reboot时候的通知函数
 
+原理同上, 重启的时候回调用这个函数
+
+```cpp
+register_reboot_notifier(&kvm_reboot_notifier);
 ```
 
-```
+##
 
 ## 赋值file_operations的模块名
 
