--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -26,9 +26,9 @@ vmx_init()                               // 初始化入口
  |   ├─ kvm_irqfd_init()                 // 初始化KVM框架
  |   ├─ kvm_arch_hardware_setup()        // 初始化KVM框架
  |   ├─ smp_call_function_single()       // 对每个online cpu
- |   ├─ cpuhp_setup_state_nocalls()      // 初始化KVM框架
+ |   ├─ cpuhp_setup_state_nocalls()      // 
  |   ├─ register_reboot_notifier()       // 注册reboot时候的通知函数
- |   ├─ kvm_cache_create_usercopy()      // 
+ |   ├─ kvm_cache_create_usercopy()      // 创建kmem cache, 为了对齐
  |   ├─ kvm_async_pf_init()              // 
  |   ├─ misc_register(&kvm_dev)          // 注册字符设备文件/dev/kvm 
  |   ├─ register_syscore_ops()           // 注册系统核心函数, 这里是suspend和resume
@@ -62,21 +62,47 @@ r = kvm_arch_init(opaque);
 
 先功能性检查, 
 
+## 
+
 ## 注册CPU状态变化的通知函数
 
+```cpp
+r = cpuhp_setup_state_nocalls(CPUHP_AP_KVM_STARTING, "kvm/cpu:starting",
+                    kvm_starting_cpu, kvm_dying_cpu);
 ```
-r = register_cpu_notifier(&kvm_cpu_notifier);
-```
+
+注册`kvm_cpu_notifier`回调函数`.notifier_call = kvm_cpu_hotplug`
+
+`kvm_cpu_hotplug`分别处理`CPU_DYING`, `CPU_UP_CANCELED` 与 `CPU_ONLINE`三种通知, 并**使能**或**禁止cpu虚拟化特性**
+
+* hardware_enable
+    * hardware_enable_nolock()
+        * kvm_arch_hardware_enable() // 使能虚拟化特性
+* hardware_disable
 
 ## 注册reboot时候的通知函数
 
-原理同上, 重启的时候回调用这个函数
+原理同上, 重启的时候会调用这个函数
 
 ```cpp
 register_reboot_notifier(&kvm_reboot_notifier);
 ```
 
-##
+## 分配内存
+
+根据注释, 主要为了满足fx_save的对齐要求
+
+```cpp
+/* A kmem cache lets us meet the alignment requirements of fx_save. */
+if (!vcpu_align)
+    vcpu_align = __alignof__(struct kvm_vcpu);
+kvm_vcpu_cache =
+    kmem_cache_create_usercopy("kvm_vcpu", vcpu_size, vcpu_align,
+                    SLAB_ACCOUNT,
+                    offsetof(struct kvm_vcpu, arch),
+                    sizeof_field(struct kvm_vcpu, arch),
+                    NULL);
+```
 
 ## 赋值file_operations的模块名
 
