--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -71,9 +71,7 @@ r = cpuhp_setup_state_nocalls(CPUHP_AP_KVM_STARTING, "kvm/cpu:starting",
                     kvm_starting_cpu, kvm_dying_cpu);
 ```
 
-注册`kvm_cpu_notifier`回调函数`.notifier_call = kvm_cpu_hotplug`
-
-`kvm_cpu_hotplug`分别处理`CPU_DYING`, `CPU_UP_CANCELED` 与 `CPU_ONLINE`三种通知, 并**使能**或**禁止cpu虚拟化特性**
+当cpu状态变成starting会调用回调函数`kvm_starting_cpu`和`kvm_dying_cpu`, 这里面会**使能**或**禁止cpu虚拟化特性**
 
 * hardware_enable
     * hardware_enable_nolock()
