--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -64,6 +64,14 @@ r = kvm_arch_init(opaque);
 
 ## 
 
+```cpp
+for_each_online_cpu(cpu) {
+		smp_call_function_single(cpu, check_processor_compat, &r, 1);
+}
+```
+
+对每一个online的cpu调用`smp_call_function_single`, 这个函数是让第一个参数(cpu)运行第二个参数(``)
+
 ## 注册CPU状态变化的通知函数
 
 ```cpp
