--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -18,15 +18,15 @@ vmx_init()                               // 初始化入口
  |   |   ├─disabled_by_bios()            // bios是否禁用vt
  |   |   ├─boot_cpu_has()                // CPU是否支持一些特性
  |   |   ├─kmem_cache_create("x86_fpu")  // 
- |   |   ├─alloc_percpu()                // CPU是否支持一些特性
- |   |   ├─kvm_mmu_module_init()         // CPU是否支持一些特性
- |   |   ├─kvm_mmu_set_mask_ptes()       // CPU是否支持一些特性
- |   |   ├─kvm_timer_init()              // CPU是否支持一些特性
- |   |   ├─kvm_lapic_init()              // CPU是否支持一些特性
- |   ├─ kvm_irqfd_init()                 // 初始化KVM框架
- |   ├─ kvm_arch_hardware_setup()        // 初始化KVM框架
- |   ├─ smp_call_function_single()       // 对每个online cpu
- |   ├─ cpuhp_setup_state_nocalls()      // 
+ |   |   ├─alloc_percpu()                // 
+ |   |   ├─kvm_mmu_module_init()         // 
+ |   |   ├─kvm_mmu_set_mask_ptes()       // 
+ |   |   ├─kvm_timer_init()              // 
+ |   |   ├─kvm_lapic_init()              // 
+ |   ├─ kvm_irqfd_init()                 // 
+ |   ├─ kvm_arch_hardware_setup()        // 
+ |   ├─ smp_call_function_single()       // 对每个online cpu进行兼容性检查
+ |   ├─ cpuhp_setup_state_nocalls()      // 注册cpu状态变化的回调函数
  |   ├─ register_reboot_notifier()       // 注册reboot时候的通知函数
  |   ├─ kvm_cache_create_usercopy()      // 创建kmem cache, 为了对齐
  |   ├─ kvm_async_pf_init()              // 
@@ -62,7 +62,7 @@ r = kvm_arch_init(opaque);
 
 先功能性检查, 
 
-## 
+## 检查处理器对vmx的兼容性
 
 ```cpp
 for_each_online_cpu(cpu) {
@@ -70,7 +70,11 @@ for_each_online_cpu(cpu) {
 }
 ```
 
-对每一个online的cpu调用`smp_call_function_single`, 这个函数是让第一个参数(cpu)运行第二个参数(``)
+对每一个online的cpu调用`smp_call_function_single`, 这个函数是让第一个参数(cpu)运行第二个参数(`check_processor_compat`), 最终调用`kvm_x86_ops`的`check_processor_compatibility`
+
+在前面的`kvm_arch_init`中已经初始化了`kvm_x86_ops`, 这里以vmx为例
+
+最终调用`vmx_check_processor_compat`, 检查处理器的兼容性
 
 ## 注册CPU状态变化的通知函数
 
