--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -25,6 +25,17 @@ vmx_init()                               // 初始化入口
  |   |   ├─kvm_lapic_init()              // 
  |   ├─ kvm_irqfd_init()                 // 
  |   ├─ kvm_arch_hardware_setup()        // 
+ |   |   ├─kvm_x86_ops->hardware_setup() // CPU是否支持kvm 
+ |   |   |  ├─rdmsrl_safe()              // 读msr
+ |   |   |  ├─store_idt()                // 保存idt
+ |   |   |  ├─setup_vmcs_config()        // 建立vmcs_config
+ |   |   |  ├─boot_cpu_has()             // 保存idt
+ |   |   |  ├─cpu_has_vmx_vpid()         // 保存idt
+ |   |   |  ├─cpu_has_vmx_invvpid()      // 保存idt
+ |   |   |  ├─cpu_has_vmx_ept()          // 保存idt
+ |   |   |  ├─cpu_has_vmx_XXX()          // 保存idt
+ |   |   |  ├─kvm_x86_ops->hardware_setup() // CPU是否支持kvm 
+ |   |   └─kvm_init_msr_list()           // 
  |   ├─ smp_call_function_single()       // 对每个online cpu进行兼容性检查
  |   ├─ cpuhp_setup_state_nocalls()      // 注册cpu状态变化的回调函数
  |   ├─ register_reboot_notifier()       // 注册reboot时候的通知函数
@@ -61,6 +72,18 @@ r = kvm_arch_init(opaque);
 ```
 
 先功能性检查, 
+
+## 硬件配置
+
+### vmx/svm的硬件配置
+
+实际上调用的是 `kvm_x86_ops->hardware_setup()`
+
+```
+
+```
+
+
 
 ## 检查处理器对vmx的兼容性
 
