--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -28,13 +28,15 @@ vmx_init()                               // 初始化入口
  |   |   ├─kvm_x86_ops->hardware_setup() // CPU是否支持kvm 
  |   |   |  ├─rdmsrl_safe()              // 读msr
  |   |   |  ├─store_idt()                // 保存idt
- |   |   |  ├─setup_vmcs_config()        // 建立vmcs_config
- |   |   |  ├─boot_cpu_has()             // 保存idt
- |   |   |  ├─cpu_has_vmx_vpid()         // 保存idt
- |   |   |  ├─cpu_has_vmx_invvpid()      // 保存idt
- |   |   |  ├─cpu_has_vmx_ept()          // 保存idt
- |   |   |  ├─cpu_has_vmx_XXX()          // 保存idt
- |   |   |  ├─kvm_x86_ops->hardware_setup() // CPU是否支持kvm 
+ |   |   |  ├─setup_vmcs_config()        // 建立vmcs_config和vmx_capability
+ |   |   |  ├─boot_cpu_has()             // CPU特性支持
+ |   |   |  ├─cpu_has_vmx_vpid()         // cpu是否支持vpid
+ |   |   |  ├─cpu_has_vmx_invvpid()      // cpu是否支持invvpid
+ |   |   |  ├─cpu_has_vmx_ept()          // cpu是否支持ept
+ |   |   |  ├─cpu_has_vmx_XXX()          // cpu是否有XXX
+ |   |   |  ├─vmx_enable_tdp()           // 开启tdp
+ |   |   |  ├─kvm_disable_tdp()          // 关闭tdp
+ |   |   |  └─alloc_kvm_area()           // 
  |   |   └─kvm_init_msr_list()           // 
  |   ├─ smp_call_function_single()       // 对每个online cpu进行兼容性检查
  |   ├─ cpuhp_setup_state_nocalls()      // 注册cpu状态变化的回调函数
@@ -75,12 +77,15 @@ r = kvm_arch_init(opaque);
 
 ## 硬件配置
 
-### vmx/svm的硬件配置
+### vmx/svm的硬件配置hardware_setup()
 
 实际上调用的是 `kvm_x86_ops->hardware_setup()`
 
-```
+#### 设置全局vmcs_config和vmx_capability
 
+```cpp
+if (setup_vmcs_config(&vmcs_config, &vmx_capability) < 0)
+    return -EIO;
 ```
 
 
